# strife_game_rs

./: .gitignore  cargo.toml
serde_json_display_derive/: Cargo.toml
serde_json_display_derive/src/: lib.rs
strife_game_core/: Cargo.toml
strife_game_core/src/: game.rs  lib.rs
strife_game_core/src/configures/: mod.rs
strife_game_core/src/ecs/: error.rs  mod.rs
strife_game_core/src/ecs/components/: mod.rs  monster_ai_component.rs  position_component.rs  velocity_component.rs
strife_game_core/src/ecs/registries/: mod.rs  registry.rs  sync_data_structs.rs
strife_game_core/src/ecs/registries/core_registry/: core_registry.rs  mod.rs
strife_game_core/src/ecs/registries/mirror_registry/: mirror_registry.rs  mod.rs
strife_game_core/src/ecs/systems/: mod.rs  monster_ai_system.rs  movement_system.rs
strife_game_core/tests/: simple_run_game.rs
strife_text_game/: Cargo.toml
vec2_helper_derive/: Cargo.toml
