[package]
name = "strife_game_core"
version = "0.1.0"
edition = "2024"

[dependencies]
# ecs
bevy_ecs = "^0.16"
glam = {version =  "^0.30", features = ["serde"] }
derive_more = {version =  "^2.0", features = ["full"] }

# physics
rapier2d = "^0.26"

# serialize
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_json_display_derive = { path = "../serde_json_display_derive" }

# error
anyhow = "^1.0"
thiserror = "^2.0"